cilium/cilium-prometheus.yaml
---
# Source: prometheus/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
# Source: prometheus/templates/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - name: webui
    port: 9090
    protocol: TCP
    targetPort: 9090
    nodePort: 30617
  selector:
    app: prometheus
  type: NodePort
---
# Source: prometheus/templates/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      name: cilium-prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yaml
        - --storage.tsdb.path=/prometheus/
        - --log.level=info
        - --enable-feature=exemplar-storage
        image: "prom/prometheus:v2.43.0"
        imagePullPolicy: IfNotPresent
        name: prometheus
        ports:
        - containerPort: 9090
          name: webui
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/prometheus
          name: config-volume
          readOnly: true
        - mountPath: /prometheus/
          name: storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: prometheus-k8s
      volumes:
      - configMap:
          name: prometheus
        name: config-volume
      - emptyDir: {}
        name: storage
