cilium/hubble-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: cilium.example.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  hubble-ui
                port:
                  number: 80
